improved : fine grained the way links are handled in the preview Two cases : 1- internal link ( <=> api.isLinkPreviewable(... ) = true ) : we allow navigation with shift + click 2- extenal link => navigation is disabled. fixes #247

--- a/assets/czr/sek/css/sek-preview.css
+++ b/assets/czr/sek/css/sek-preview.css
@@ -1319,7 +1319,7 @@ html.no-js [id*=sek-slider-loader-wrapper] {
 
 /* STYLE LINKS */
 .nimble-unclickable{cursor: not-allowed !important;}
-
+.nimble-shift-clickable{cursor: alias!important;}
 
 
 /* STYLE FOR GLOBAL LOCATIONS AND SECTIONS */
